// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with one expense 1`] = `
<div>
  <h1>
    Viewing 3 
    expense
     totaling 
    $2.35
     
  </h1>
</div>
`;

exports[`should correctly render expenses summary with one expense 2`] = `
<div>
  <h1>
    Viewing 3 
    expenses
     totaling 
    $23,234.35
     
  </h1>
</div>
`;
